# enn

./: README.md  __init__.py  docker-compose.yml  test_report_deepseek.json  test_report_treebase.json  test_report_v2_text.json  test_summary.txt  test_summary_v2.txt
backend/: .env.example  .gitignore  Dockerfile  __init__.py  __main__.py  config.py  main.py  requirements.txt
backend/api/: __init__.py  routes.py
backend/graph/: __init__.py  models.py  storage.py
backend/llm/: __init__.py  client.py  embeddings.py  entity_extractor.py
backend/parser/: __init__.py  cpp_parser.py  md_parser.py
backend/static/: index.html
backend/synthetic_test/: CMakeLists.txt  main.cpp
backend/synthetic_test/include/: base.h  graph.h  parser.h
backend/synthetic_test/src/: base.cpp  graph.cpp  parser.cpp
data/: enn.db
test_data/cpp_project/: architecture_notes.md  chat_log_physics.md  main.cpp  physics_engine.cpp  physics_engine.h  renderer.h
test_data/ranobe/merkuriy/: vozvyshenie_merkuriya_kniga_1.fb2  vozvyshenie_merkuriya_kniga_1.txt  vozvyshenie_merkuriya_kniga_10.fb2  vozvyshenie_merkuriya_kniga_10.txt  vozvyshenie_merkuriya_kniga_11.fb2  vozvyshenie_merkuriya_kniga_11.txt  vozvyshenie_merkuriya_kniga_12.fb2  vozvyshenie_merkuriya_kniga_12.txt  vozvyshenie_merkuriya_kniga_13.fb2  vozvyshenie_merkuriya_kniga_13.txt  vozvyshenie_merkuriya_kniga_15.fb2  vozvyshenie_merkuriya_kniga_15.txt  vozvyshenie_merkuriya_kniga_16.fb2  vozvyshenie_merkuriya_kniga_16.txt  vozvyshenie_merkuriya_kniga_17.fb2  vozvyshenie_merkuriya_kniga_17.txt  vozvyshenie_merkuriya_kniga_2.fb2  (+15 more)
(+14 files in other folders)
